[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/images/items/pwrup_healthpack.png" type="Texture" id=1]
[ext_resource path="res://powerups/healthpack.gd" type="Script" id=2]
[ext_resource path="res://data/images/lights/spot.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.3714, 30.4503 )

[node name="HealthPack" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="EffectTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Light2D" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 3 )
color = Color( 1, 0.321569, 0.321569, 1 )
energy = 2.5
range_item_cull_mask = 2
shadow_item_cull_mask = 2
[connection signal="body_entered" from="." to="." method="_on_FireRatePowerUp_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
